fix align of member and adjust table

--- a/css/env.css
+++ b/css/env.css
@@ -56,6 +56,7 @@ section.env-img table tr td div {
   margin-top: 30px;
   margin-left: 500px;
 }
+
 @media only screen and (max-width:768px) {
   /* table */
   section.env-table h1{
@@ -76,14 +77,16 @@ section.env-img table tr td div {
 
   section.env-table table.env-table tr.row_desc {
     color: white;
-    font-size: 3.5vw;
+    font-size: 3vw;
     text-align: center;
   }
 
   section.env-table table.env-table tr.row_desc th.col_desc {
     color: white;
     border: 1px solid;
-    font-size: 3.5vw;
+    font-size: 3vw;
+    padding: 10px;
+
   }
 
   /* img */
